<resources>
    <string name="app_name">HomamRestaurant</string>
    <string name="login">Login</string>
    <string name="rotate">0</string>
    <string name="rotate0">180</string>
    <string name="welcome">ًWelcome</string>
    <string name="please_login_or_sign_up_to_continue_using_our_app">please login or sign up to continue using our app</string>
    <string name="email_phonenumber">Email/PhoneNumber</string>
    <string name="please_check_your_email_and_try_again">please check your email and try again.</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="home">Home</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="waiting_order">Waiting Order</string>
    <string name="delivered">Delivered</string>
    <string name="accepted_order">Accepted Order</string>
    <string name="canceled_order">Canceled Order</string>
    <string name="restaurant">Restaurant</string>
    <string name="driver">Driver</string>
    <string name="order_details">Order Details</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="tax">Tax</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email or Phone</string>
    <string name="login_success">Login Success</string>
</resources>